[gd_scene load_steps=21 format=3 uid="uid://7861smkn6sjv"]

[ext_resource type="Script" uid="uid://dnui4uokypn32" path="res://Singletons/Clicker.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://drrc7o7atsa0a" path="res://Tendril.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bscrrmiu2lp7k" path="res://Art/Demo/smoke_04.png" id="3"]
[ext_resource type="Texture2D" uid="uid://68rwe7nfmycw" path="res://Art/Space/Circle 400.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c6puuqdi6eu44" path="res://Art/Circle.png" id="5"]
[ext_resource type="Shader" uid="uid://dygoodb0mcvh6" path="res://Clicker.gdshader" id="6"]

[sub_resource type="Animation" id="Animation_hhq75"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Pivot/Art Pivot/Crosshair120:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Pivot/Art Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rdg0s"]
resource_name = "Spin"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Pivot/Art Pivot/Crosshair120:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ts2ap"]
resource_name = "new_animation"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CanvasLayer/Pivot/Art Pivot/Crosshair120:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Pivot/Art Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ts2ap"]
_data = {
&"RESET": SubResource("Animation_hhq75"),
&"Spin": SubResource("Animation_rdg0s"),
&"new_animation": SubResource("Animation_ts2ap")
}

[sub_resource type="Shader" id="Shader_3ojhx"]
code = "shader_type canvas_item;

uniform int lightning_number = 5;
uniform vec2 amplitude = vec2(2.0,1.0);
uniform float offset = 0.45;
uniform float thickness = 0.02;
uniform float speed = 3.0;
uniform vec4 base_color : source_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float glow_thickness = 0.08;
uniform vec4 glow_color : source_color = vec4(0.2, 0, 0.8, 0.0);
uniform float alpha : hint_range(0, 1) = 1.0;

// plot function 
float plot(vec2 st, float pct, float half_width){
  return  smoothstep( pct-half_width, pct, st.y) -
          smoothstep( pct, pct+half_width, st.y);
}

vec2 hash22(vec2 uv) {
    uv = vec2(dot(uv, vec2(127.1,311.7)),
              dot(uv, vec2(269.5,183.3)));
    return 2.0 * fract(sin(uv) * 43758.5453123) - 1.0;
}

float noise(vec2 uv) {
    vec2 iuv = floor(uv);
    vec2 fuv = fract(uv);
    vec2 blur = smoothstep(0.0, 1.0, fuv);
    return mix(mix(dot(hash22(iuv + vec2(0.0,0.0)), fuv - vec2(0.0,0.0)),
                   dot(hash22(iuv + vec2(1.0,0.0)), fuv - vec2(1.0,0.0)), blur.x),
               mix(dot(hash22(iuv + vec2(0.0,1.0)), fuv - vec2(0.0,1.0)),
                   dot(hash22(iuv + vec2(1.0,1.0)), fuv - vec2(1.0,1.0)), blur.x), blur.y) + 0.5;
}

float fbm(vec2 n) {
    float total = 0.0, amp = 1.0;
    for (int i = 0; i < 7; i++) {
        total += noise(n) * amp;
        n += n;
        amp *= 0.5;
    }
    return total;
}


void fragment(){
	vec2 uv = UV;
	vec4 color = vec4(0.0, 0.0, 0.0, 0.0);
	
	vec2 t ;
	float y ;
	float pct ;
	float buffer;	
	// add more lightning
	for ( int i = 0; i < lightning_number; i++){
		t = uv * amplitude + vec2(float(i), -float(i)) - TIME*speed;
		y = fbm(t)*offset;
		pct = plot(uv, y, thickness);
		buffer = plot(uv, y, glow_thickness);
		color += pct*base_color;
		color += buffer*glow_color;
	}
	
	color.a *= alpha;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtfk3"]
resource_local_to_scene = true
shader = SubResource("Shader_3ojhx")
shader_parameter/lightning_number = 4
shader_parameter/amplitude = Vector2(2, 1)
shader_parameter/offset = 0.45
shader_parameter/thickness = 0.07
shader_parameter/speed = -0.3
shader_parameter/base_color = Color(0.837, 0.8773, 0.93, 1)
shader_parameter/glow_thickness = 0.025
shader_parameter/glow_color = Color(0, 0, 0, 0.44313726)
shader_parameter/alpha = 1.0

[sub_resource type="Shader" id="Shader_0ghol"]
resource_local_to_scene = true
code = "shader_type canvas_item;

render_mode blend_mix; // allows transparency blending

uniform float strength: hint_range(0., 1.) = 0.5;
uniform float speed: hint_range(0., 10.) = 0.5;
uniform float angle: hint_range(0., 360.) = 0.;
uniform float transparency: hint_range(0., 1.) = 0.5; // controls how see-through the effect is

void fragment() {
	float hue = UV.x * cos(radians(angle)) - UV.y * sin(radians(angle));
	hue = fract(hue + fract(TIME * speed));

	float x = 1. - abs(mod(hue / (1. / 6.), 2.) - 1.);
	vec3 rainbow;
	if (hue < 1. / 6.) {
		rainbow = vec3(1., x, 0.);
	} else if (hue < 1. / 3.) {
		rainbow = vec3(x, 1., 0.);
	} else if (hue < 0.5) {
		rainbow = vec3(0, 1., x);
	} else if (hue < 2. / 3.) {
		rainbow = vec3(0., x, 1.);
	} else if (hue < 5. / 6.) {
		rainbow = vec3(x, 0., 1.);
	} else {
		rainbow = vec3(1., 0., x);
	}

	vec4 base_color = texture(TEXTURE, UV);
	vec3 mixed = mix(base_color.rgb, rainbow, strength);

	// Apply transparency so the sprite behind can show through
	COLOR = vec4(mixed, base_color.a * (1.0 - transparency));
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nydip"]
resource_local_to_scene = true
shader = SubResource("Shader_0ghol")
shader_parameter/strength = 0.5
shader_parameter/speed = 0.400000019
shader_parameter/angle = 0.0
shader_parameter/transparency = 0.30000001425

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m82dl"]
shader = ExtResource("6")
shader_parameter/color = Color(0.3234, 0.3234, 0.33, 1)
shader_parameter/diameter = 0.95
shader_parameter/thickness = 0.07
shader_parameter/frequency = 8.0
shader_parameter/phase = 0.0
shader_parameter/edge_width = 0.06

[sub_resource type="Gradient" id="Gradient_20uw0"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3ojhx"]
gradient = SubResource("Gradient_20uw0")
width = 32
height = 32

[sub_resource type="Animation" id="Animation_20uw0"]
resource_name = "OrbitMoons"
length = 1.67
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Moons:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.67),
"transitions": PackedFloat32Array(1, 0.9659363),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="Animation" id="Animation_3ojhx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Moons:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtfk3"]
_data = {
&"OrbitMoons": SubResource("Animation_20uw0"),
&"RESET": SubResource("Animation_3ojhx")
}

[node name="Clicker" type="Node2D"]
z_index = 10
script = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ts2ap")
}
autoplay = "new_animation"

[node name="Tendril" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_jtfk3")
rotation = 2.7034059
scale = Vector2(1.25, 1.25)
points = PackedVector2Array(21.976665, -22.390764, -10.100545, -31.236824, -39.727024, -0.06196022)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="Pivot" type="Node2D" parent="CanvasLayer"]
unique_name_in_owner = true

[node name="Art Pivot" type="Node2D" parent="CanvasLayer/Pivot"]
unique_name_in_owner = true

[node name="Smoke10" type="Sprite2D" parent="CanvasLayer/Pivot/Art Pivot"]
unique_name_in_owner = true
position = Vector2(-1, 0)
texture = ExtResource("3")

[node name="ClickSprite" type="Sprite2D" parent="CanvasLayer/Pivot/Art Pivot"]
unique_name_in_owner = true
visible = false
scale = Vector2(0.075, 0.075)
texture = ExtResource("4")

[node name="Auto Crit Effcet" type="Sprite2D" parent="CanvasLayer/Pivot/Art Pivot"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_nydip")
scale = Vector2(0.32, 0.32)
texture = ExtResource("5")

[node name="Crosshair120" type="Sprite2D" parent="CanvasLayer/Pivot/Art Pivot"]
unique_name_in_owner = true
clip_children = 2
material = SubResource("ShaderMaterial_m82dl")
texture = SubResource("GradientTexture2D_3ojhx")

[node name="Moons" type="Node2D" parent="CanvasLayer"]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jtfk3")
}
autoplay = "OrbitMoons"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
